# Copyright 2025 CloudWeGo Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# ============================================================================
# schema - Core data types and schema definitions
# Aligned with Go package: github.com/cloudwego/eino/schema
#
# Go source files:
#   schema/document.go, schema/message.go, schema/message_parser.go,
#   schema/serialization.go, schema/stream.go, schema/tool.go, etc.
# ============================================================================

cc_library(
    name = "schema",
    srcs = [
        "document.cpp",
        "message.cpp",
        "message_concat.cpp",
        "message_format.cpp",
        "message_parser.cpp",
        "serialization.cpp",
        "stream_copy.cpp",
        "tool.cpp",
        "types.cpp",
    ],
    deps = [
        "//include/eino:schema_hdrs",
        "//include:nlohmann_json",
    ],
)
