# Copyright 2025 CloudWeGo Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# ============================================================================
# adk/prebuilt - Pre-built agent patterns (Deep, PlanExecute, Supervisor)
# Aligned with Go package: github.com/cloudwego/eino/adk/prebuilt
#
# Go sub-packages:
#   adk/prebuilt/deep
#   adk/prebuilt/planexecute
#   adk/prebuilt/supervisor
# ============================================================================

cc_library(
    name = "prebuilt",
    srcs = [
        "deep.cpp",
        "plan_execute.cpp",
        "react.cpp",
        "supervisor.cpp",
    ],
    deps = [
        "//include/eino:adk_hdrs",
        "//src/adk",
        "//src/compose",
        "//src/schema",
        "//include:nlohmann_json",
    ],
)
